# JobSpy

./: .gitignore  CLAUDE.md  pyproject.toml
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  routes.py  services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: JobDetail.tsx  JobForm.tsx  JobTable.tsx  Pagination.tsx  ProxyList.tsx
frontend/src/pages/: SavedJobsPage.tsx  ScraperPage.tsx
frontend/src/types/: job.ts
jobspy/: __init__.py  exception.py  model.py
jobspy/wellfound/: __init__.py  constant.py  util.py
