[project]
name = "python-jobspy"
version = "1.1.82"
description = "Job scraper for LinkedIn, Indeed, Glassdoor, ZipRecruiter & Bayt"
authors = [
    {name = "Cullen Watson", email = "cullen@cullenwatson.com"},
    {name = "Zachary Hampton", email = "zachary@zacharysproducts.com"},
]
readme = "README.md"
keywords = ["jobs-scraper", "linkedin", "indeed", "glassdoor", "ziprecruiter", "bayt", "naukri"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.0",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "tls-client>=1.0.1",
    "markdownify>=1.2.2",
    "regex>=2026.1.15",
]

[project.urls]
Homepage = "https://github.com/cullenwatson/JobSpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "black>=26.1.0",
    "pre-commit>=4.5.1",
]

[tool.black]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["jobspy"]
